--- a/src/app/log-viewer/log-filters/log-filters.component.scss
+++ b/src/app/log-viewer/log-filters/log-filters.component.scss
@@ -61,15 +61,15 @@ button {
   max-width: 300px;
   display: none;
   position: absolute;
-  // overflow: auto;
   background-color: #fff;
   border-radius: $border-radius;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
 
   ul {
+    margin: 0;
     padding: 0;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 50vh;
   }
 
@@ -78,11 +78,19 @@ button {
     width: 300px;
     display: block;
     text-decoration: none;
-    padding: 5px 40px;
+    // margin: 5px 40px;
     font-size: $font-size;
+    label {
+      display: block;
+      padding: 5px 40px;
+    }
+    .dropdownSearch {
+      padding: 5px 40px;
+    }
 
     &:hover {
       border-radius: $border-radius;
+      border: 1px solid gray;
       cursor: pointer;
       font-size: $font-size;
     }
